	* Added supybot.reply.truncate, to turn off the normal more'ing
	of replies.
	
	* Added supybot.plugins.Enforcer.takeRevengeOnOps, which makes
	the bot even take revenge on #channel,ops who try to violate the
	channel configuration.  Of course, such people can change the
	channel configuration to their bidding, but it's a decent
	protection against errant botscripts or something.
	
	* Added supybot.plugins.Channels.alwaysRejoin, to make the bot
	always rejoin when it's kicked.
	
	* Added supybot.databases.users.hash, allowing those running bots
	to specify the default hashed/unhashed state of user passwords in
	the config file.
	
	* Added Debian.bug, which retrieve bug info from Debian's BTS.

	* Changed Relay.names to Relay.nicks, to be consistent with
	Channel.nicks.
	
	* Added supybot.brackets, a configuration variable for specifying
	which set of matching brackets to use for nested commands.  Valid
	values are [] (the default), {}, <>, and ().
	
	* Added a configuration variable to ChannelLogger, timestamp,
	which determines whether the bot will timestamp its logfiles.
	This is a channel-specific variable, of course.
	
	* Updated ChannelLogger not to log messages starting with
	[nolog], in order to allow private information to remain private.

	* Added a configuration variable to ChannelLogger,
	flushImmediately, to cause all channel logs to be flushed every
	time they're modified, for those people who like to read the logs
	through tail -f or something similar.
	
	* Updated WordStats to allow removing of tracked words.

	* Updated Seen.seen to accept no arguments and return the last
	message spoken by anyone.

	* Updated the Herald plugin to use the standard substitute until
	we get it updated to use commands as heralds instead of plain
	strings.

	* Updated echo to use the standard substitute on its reply.

	* Updated Network.whois so that it can now retrieve
	information on all domains.

	* Updated the Weather plugin to be retrieve weather from either